# webcam-ndi-cpp

./: .gitignore  .gitmodules  CMakeLists.txt  install-3rdparty.sh
resources/: .gitignore  package-lock.json  package.json  tsconfig.json
resources/src/: index.ts  urlparam.ts  valueinfo.ts
resources/static/: index.html  site.js
src/: CMakeLists.txt  httpserver.cpp  httpserver.hpp  httpstatic.cpp  httpstatic.hpp  main.cpp  ndi-sender.cpp  ndi-sender.hpp  settings.cpp  settings.hpp  valueinfo.hpp  videoconnection.cpp  videoconnection.hpp  webcam.cpp  webcam.hpp
